--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -38,7 +39,10 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@reduxjs/toolkit": "^2.8.2",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
+    "bootstrap": "^5.3.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -46,14 +50,20 @@
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.1",
+    "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.10.1",
+    "reactstrap": "^9.2.3",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
@@ -66,6 +76,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-select": "^5.0.0",
     "@types/yup": "^0.32.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
