--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "autoprefixer": "^10.4.20",
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -59,6 +60,7 @@
     "next-themes": "^0.4.4",
     "qrcode": "^1.5.4",
     "react": "^19",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-dropzone": "^14.3.8",
